--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            12345 Somewhere near UP
+                            12345 Somewhere in Pretoria
                             <br />
                             Hatfields, 2022
                         </p>
